--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/functions": "^1.4.1",
     "@vercel/speed-insights": "^1.0.12",
     "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^4.0.0",
     "sass": "^1.78.0",
     "sharp": "^0.33.5"
   },
